Fix broken flexbox rendering on IE11

--- a/src/content/assets/css/plain.css
+++ b/src/content/assets/css/plain.css
@@ -1,16 +1,9 @@
-html
-{
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
 body
 {
   display: flex;
   margin: 0;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
   text-align: center;
 }
 
@@ -29,11 +22,12 @@ body > main
 {
   display: flex;
   flex-direction: column;
+  flex: 1 0 auto;
 }
 
-body > main, .spacer
+.spacer
 {
-  flex-basis: 100%;
+  flex-grow: 1;
 }
 
 footer
